k8s/cfainstaserverapi-depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: nsenv
spec:
  serviceName: "mongodb"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:5.0
          ports:
            - containerPort: 27017
              name: mongodb
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-srv
  namespace: nsenv
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cfainstaserverapi-depl
  namespace: nsenv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cfainstaserverapi
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cfainstaserverapi
    spec:
      containers:
        - name: cfainstaserverapi
          image: cyprienotto/cfainstaserverapi:latest
          imagePullPolicy: Always
          ports:
            - name: servapiport
              containerPort: 4000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: cfainstaserverapi-srv
  namespace: nsenv
spec:
  selector:
    app: cfainstaserverapi
  type: ClusterIP
  ports:
    - name: cfainstaserverapi
      port: 4000
      targetPort: 4000
